# Stock_Monitor_Project

./: README.md  app.py  functions.py  historical_data.csv  ibov_2025-01-12.csv  index.py  pyproject.toml  sectors.csv  tabela_ibov.csv
components/: chatgpt.py  fixed_row.py  header.py  home.py  modal.py  wallet.py
