[tool.poetry]
name = "stock-monitor-project"
version = "0.1.0"
description = ""
authors = ["AndersonStumpf <andersonreis.stumpf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
pandas = "^2.2.3"
numpy = "^2.2.1"
websocket = "^0.2.1"
websocket-client = "^1.8.0"
datetime = "^5.5"
openai = "^1.61.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
